--- a/demo/css/common.css
+++ b/demo/css/common.css
@@ -23,6 +23,8 @@ body {
     display: none;
     position: absolute;
     width: 100%;
+    height: 20px;
+    margin-top: 30px;
     text-align: left;
     pointer-events: auto;
     background-color: #ffffff;
@@ -73,6 +75,7 @@ body {
     margin-top: 10px;
     margin-left: -5px;
     padding: 10px;
+    padding-top: 25px;
     left: 50%;
     width: 100%;
     height: 100%;
