--- a/src/style/iSlider.css
+++ b/src/style/iSlider.css
@@ -4,7 +4,7 @@
 .islider-pic,
 .islider-dom,
 .islider-node,
-.islider-html
+.islider-html,
 .islider-element {
     position: absolute;
     margin: 0;
