--- a/demo/public/css/index_new.css
+++ b/demo/public/css/index_new.css
@@ -10,10 +10,6 @@ body {
     font-family: "proxima-nova", 'Helvetica Neue', 'Helvetica', 'sans-serif';
 }
 
-h1, h2, h3, h4, h5, h6 {
-    color: #232830;
-}
-
 p {
     color: #566076;
     margin-bottom: 12px;
@@ -48,24 +44,51 @@ ul li {
   line-height: 22px;
 }
 
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    max-width: 100%;
+    background-color: transparent;
+    border: 1px solid #ddd;
+    font-size: 14px;
+}
+
+th {
+    text-align: left;
+}
+
+table>tbody>tr:nth-child(odd)>th, table>tbody>tr:nth-child(odd)>td {
+    background-color: #f9f9f9;
+}
+
+table>tbody>tr>td {
+    padding: 8px;
+    line-height: 1.42857143;
+    vertical-align: top;
+    border-top: 1px solid #ddd;
+}
+
 code {
     font-family: 'source-code-pro', monospace;
     font-size: 14px;
 }
 
-p code {
-    background-color: #fafafa;
-    padding: 4px 8px;
-    border-radius: 6px;
-    color: #232830;
+table code {
+    padding: 2px 4px;
+    font-size: 90%;
+    color: #c7254e;
+    white-space: nowrap;
+    background-color: #f9f2f4;
+    border-radius: 4px;
 }
+
 aside {
     position: fixed;
     height: 100%;
     background-color: #fafafa;
     left: 0;
     top: 0;
-    width: 220px;
+    width: 250px;
     border-right: 5px solid #5b90bf;
     z-index: 10;
     -webkit-transition: -webkit-transform 200ms ease-in-out;
@@ -117,6 +140,10 @@ aside nav li a {
 
 aside nav li a:hover {
     background-color: #eee;
+}
+
+aside nav li a.tree:hover {
+    background-color: #fafafa;
 }
 
 aside .subsection-navigation li {
@@ -231,17 +258,70 @@ aside .subsection-navigation li a {
     background-color: #0fb748;
 }
 
-#toggle-box button:active {
-    background-color: #286090;
-}
-
-#options > div, #functions > div {
+/*#options > div, #functions > div {
     background-color: #fdfdfd;
     border: 1px solid #eee;
     margin-top: 5px;
     padding: 2px;
     border-radius: 5px;
 }
+*/
+
+#options table {
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+#options table th {
+    padding: 3px 3px;
+}
+#options table td {
+    vertical-align: top;
+    padding: 5px 3px;
+}
+
+#options .nameContainer, #method .nameContainer, #functions .nameContainer {
+    position: relative;
+    margin-top: 20px;
+    padding-top: 5px;
+    border-top: 1px solid #e1e1e1;
+    color: gray;
+}
+
+#options .nameContainer.paramContainer, #method .nameContainer.paramContainer, #functions .nameContainer.paramContainer {
+    border-top: 1px dashed #e1e1e1;
+}
+
+#options .nameContainer h4, #method .nameContainer h4, #functions .nameContainer h4 {
+    /*margin-right: 150px;*/
+    line-height: 1.3;
+    font-weight: bold;
+    font-size: 1em;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: inline-block;
+}
+
+#options span.paramType, #method span.paramType, #functions span.paramType {
+    display: inline-block;
+    border-radius: 3px;
+    font-size: 0.7em;
+    padding: 2px 4px;
+    margin-left: 3px;
+    background-color: transparent;
+    color: gray;
+}
+
+.node .node{ 
+    display:none; 
+} 
+.ceng_close{ 
+    background:url(../../imgs/zd1.gif) left center no-repeat; 
+    padding-left: 15px; 
+} 
+.ceng_open{ 
+    background:url(../../imgs/zd.gif) left center no-repeat; 
+} 
 
 @media only screen and (max-device-width: 600px), screen and (max-width: 600px) {
     p {
@@ -268,12 +348,12 @@ aside .subsection-navigation li a {
         margin-left: 0;
     }
     aside {
-        width: 220px;
-        -webkit-transform: translateX(-220px);
-        -moz-transform: translateX(-220px);
-        -o-transform: translateX(-220px);
-        -ms-transform: translateX(-220px);
-        transform: translateX(-220px);
+        width: 250px;
+        -webkit-transform: translateX(-250px);
+        -moz-transform: translateX(-250px);
+        -o-transform: translateX(-250px);
+        -ms-transform: translateX(-250px);
+        transform: translateX(-250px);
     }
     aside .hamburger-menu {
         display: block;
@@ -283,6 +363,13 @@ aside .subsection-navigation li a {
         top: 0;
         right: -45px;
         background-color: #232830;
+    }
+    .open-menu section {
+        -webkit-transform: translateX(250px);
+        -moz-transform: translateX(250px);
+        -o-transform: translateX(250px);
+        -ms-transform: translateX(250px);
+        transform: translateX(250px);
     }
     .open-menu aside .hamburger-menu li {
         -webkit-animation: hamburger-middle 400ms ease-out forwards;
