--- a/demo/public/css/index_new.css
+++ b/demo/public/css/index_new.css
@@ -130,7 +130,7 @@ aside nav li {
 aside nav li a {
     display: block;
     color: #000;
-    padding: 10px 12px;
+    padding: 3px 12px;
     text-decoration: none;
     -webkit-transition: background-color 200ms ease-in-out;
     -moz-transition: background-color 200ms ease-in-out;
@@ -140,10 +140,6 @@ aside nav li a {
 
 aside nav li a:hover {
     background-color: #eee;
-}
-
-aside nav li a.tree:hover {
-    background-color: #fafafa;
 }
 
 aside .subsection-navigation li {
@@ -306,20 +302,12 @@ aside .subsection-navigation li a {
 .node .node{ 
     display:none; 
 } 
-.ceng_close::before {
+.ceng_close::after {
     content: '+';
-    /*padding-left: 15px; */
 }
-.ceng_open::before {
+.ceng_open::after {
     content: '-';
-    font-size: 16px;
 }
-/*.ceng_close { 
-    background:url(../../imgs/zd1.gif) left center no-repeat;
-} 
-.ceng_open { 
-    background:url(../../imgs/zd.gif) left center no-repeat; 
-} */
 
 @media only screen and (max-device-width: 600px), screen and (max-width: 600px) {
     p {
@@ -344,6 +332,9 @@ aside .subsection-navigation li a {
     }
     #section-content {
         margin-left: 0;
+    }
+    section {
+        pointer-events: none;
     }
     aside {
         width: 250px;
