--- a/demo/public/css/index_new.css
+++ b/demo/public/css/index_new.css
@@ -82,6 +82,20 @@ table code {
     border-radius: 4px;
 }
 
+.title {
+    margin: .5em 0 0;
+    padding-left: 2rem;
+    font-size: 2em;
+    padding-top: 0;
+}
+
+.divider {
+    height: 1px;
+    margin: 7px 0;
+    overflow: hidden;
+    background: rgba(0,0,0,0.07);
+}
+
 aside {
     position: fixed;
     height: 100%;
